--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">experience</h2>
+								
 								<p>I gained practical experience as a Web Development & Project Management Intern at the Augustana College Entrepreneurial Center (EDGE). During this internship, I designed and modified websites according to client needs, resulting in a notable increase in web traffic. I also developed strong client relationships, ensuring that their custom needs and functionalities were met.</p>
 								<p>I am also a HeadStarter fellow where I will be building 5 AI projects in 5 weeks and as my final project goal, I will get 1000 accounts created on the project.</p>
+								<p><strong style="font-size: larger;">Languages and frameworks:</strong> Java, Python, C, JavaScript, HTML/CSS, React, WordPress, SQL</p>
+								<p><strong style="font-size: larger;">Tools:</strong> Git, AWS, VS Code, Eclipse, Tableau, MS Excel, Linux</p>
+								<p><strong style="font-size: larger;">Libraries:</strong> Pandas, NumPy, TensorFlow</p>
 							</article>
 
 						<!-- About -->
