added the inventory project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
 
 						<!-- About -->
 						<article id="about">
+							<h2 class="major">Pantry Inventory Tracker</h2>
+							<div class="image-container">
+							  <img src="images/pic03.jpg" alt="" class="image main" />
+							  <div class="overlay">
+								<a href="https://pantryinventory-app.vercel.app/" class="overlay-text">Check live site</a>
+								<a href="https://github.com/Abdulsz/Pantry-app" class="overlay-text">GitHub</a>
+							  </div>
+							</div>
+							<p>Built a robust full-stack pantry inventory tracker app with Material UI for the front-end.
+								Integrated Firebase for efficient data storage and retrieval, for addition, removal, and update of inventory reducing
+								load times and improving data reliability by 30%.
+								Implemented GPT Vision API to classify images captured from camera to update inventory.</p>
+							
+
+
+
 							<h2 class="major">Fast Food Delivery App</h2>
 							<div class="image-container">
 							  <img src="images/pic03.jpg" alt="" class="image main" />
