--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
 
 						<!-- About -->
 						<article id="about">
+
+							<h2 class="major">AI CS Advisor chatbot</h2>
+							<div class="image-container">
+							  <img src="images/pic03.jpg" alt="" class="image main" />
+							  <div class="overlay">
+								<a href="https://ai-chatbot-sand-alpha.vercel.app/" class="overlay-text">Check live site</a>
+								<a href="https://github.com/Abdulsz/AI-chatbot" class="overlay-text">GitHub</a>
+							  </div>
+							</div>
+							<p>Developed a full-stack NextJS AI chatbot using OpenAI's API, delivering intelligent, context-aware responses.
+							Integrated Retrieval-Augmented Generation (RAG) using FastAPI, boosting the chatbot's response accuracy by
+								40% through precise information retrieval from my college's Computer Science academic catalog and degree
+								requirements.</p>
+							
+
+
+
 							<h2 class="major">Pantry Inventory Tracker</h2>
 							<div class="image-container">
 							  <img src="images/pic03.jpg" alt="" class="image main" />
