added rmp project

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
 						<!-- About -->
 						<article id="about">
 
+							<h2 class="major">AI Rate My Professor chatbot</h2>
+							<div class="image-container">
+							  <img src="images/pic03.jpg" alt="" class="image main" />
+							  <div class="overlay">
+								<a href="" class="overlay-text">Check live site</a>
+								<a href="https://github.com/Abdulsz/rmp-rag" class="overlay-text">GitHub</a>
+							  </div>
+							</div>
+							<p>Implemented a web scraper with FastAPI that automatically extracts data from Rate my Professor and upsert to a
+								Pinecone index, integrated with a RAG pipeline using LangChain and OpenAI GPT-4o boosting the chatbot’s
+								response accuracy to user queries.</p>
+
+
+
 							<h2 class="major">AI CS Advisor chatbot</h2>
 							<div class="image-container">
 							  <img src="images/pic03.jpg" alt="" class="image main" />
