added link for rmp

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="image-container">
 							  <img src="images/pic03.jpg" alt="" class="image main" />
 							  <div class="overlay">
-								<a href="" class="overlay-text">Check live site</a>
+								<a href="https://ratemyprofessor-seven.vercel.app/" class="overlay-text">Check live site</a>
 								<a href="https://github.com/Abdulsz/rmp-rag" class="overlay-text">GitHub</a>
 							  </div>
 							</div>
