Updated experience section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Hi, I'm Abdul-Salam Zakaria</h1>
 								<p>A CS & Data Science Major and a Fullstack dev.</p>
-								<p><a href="https://drive.google.com/file/d/1J1rv7yLulHnEe2l6lIcQj976KDCzePkY/view?usp=sharing" target="_blank">Resume</a></p>
+								<p><a href="https://drive.google.com/file/d/1aVQEgMsdRGLHk3jYCprZq3AOEthZlide/view?usp=drive_link" target="_blank">Resume</a></p>
 							</div>
 						</div>
 						<nav>
@@ -67,9 +67,10 @@
 								<p>I was a Headstarter fellow where I built and deployed 5 AI projects in 5 weeks using React JS, Next.js, Firebase, Clerk, and Vercel, following agile
 									methodologies with weekly sprints and incorporated CI/CD practices for iterative deployment. Also used Git best practices to streamline team collaboration. Finally, I participated in weekly sessions with engineers from Google, Y Combinator, Stanford, Amazon and venture-backed
 									startups </p>
-								<p><strong style="font-size: larger;">Languages and frameworks:</strong> Java, Python, C, JavaScript, HTML/CSS, React, WordPress, SQL</p>
-								<p><strong style="font-size: larger;">Tools:</strong> Git, AWS, VS Code, Eclipse, Tableau, MS Excel, Linux</p>
+								<p><strong style="font-size: larger;">Languages and frameworks:</strong> Java, Python, C, JavaScript, HTML/CSS, React, NextJS, LangChain, SQL, Spring Boot</p>
+								<p><strong style="font-size: larger;">Tools:</strong> Git, AWS, Tableau, MS Excel, Linux</p>
 								<p><strong style="font-size: larger;">Libraries:</strong> Pandas, NumPy, TensorFlow</p>
+								<p><strong style="font-size: larger;">Databases:</strong>MongoDB, MySQL, Postgresql, Pinecone</p>
 							</article>
 
 						<!-- About -->
