--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Hi, I'm Abdul-Salam Zakaria</h1>
 								<p>A CS & Data Science Major and a Fullstack dev.</p>
-								<p><a href="https://drive.google.com/file/d/1aVQEgMsdRGLHk3jYCprZq3AOEthZlide/view?usp=drive_link" target="_blank">Resume</a></p>
+								<p><a href="https://drive.google.com/file/d/11VLTJ3B5SpfZgAuDBkAqve5SzEPc2ljG/view?usp=sharing" target="_blank">Resume</a></p>
 							</div>
 						</div>
 						<nav>
@@ -78,7 +78,7 @@
 						<!-- About -->
 						<article id="about">
 
-							<h2 class="major">Toxic Chat Classifier — NLP Project</h2>
+							<h2 class="major">Toxic Chat Classifier — NLP</h2>
 							<p> Trained a spaCy text classification model on 150K+ toxic and non-toxic comments, achieving 92% accuracy and a 0.82 F1 score. Containerized and deployed the model as an AWS Lambda function using Docker and Amazon ECR for scalable predictions, and optimized cold starts by bundling the model and dependencies within the container to avoid S3 latency. Tech: Python, spaCy, scikit-learn, AWS Lambda, Docker.</p>
 							<div class="image-container">
 								<img src="images/pic03.jpg" alt="" class="image main" />
